--- a/changelog/release-history/feature-highlights.mdx
+++ b/changelog/release-history/feature-highlights.mdx
@@ -1,108 +1,87 @@
 ---
 title: "Major Features & Improvements"
-description: "A narrative-driven summary of the most impactful new features and critical improvements introduced in recent releases. Ideal for users who want to stay on top of productivity-boosting and compatibility-expanding enhancements."
+description: "Focused summaries of standout features and enhancements introduced in each release cycle. Users can quickly scan for must-use additions and quality-of-life upgrades that unlock new testing capabilities or streamline common tasks."
 ---
 
 # Major Features & Improvements
 
-Explore the most impactful enhancements and critical features introduced in recent GoogleTest and GoogleMock releases. This narrative-driven summary is designed to keep you efficient, productive, and compatible with today's C++ testing needs.
+This page highlights the standout features and enhancements introduced in each GoogleTest and GoogleMock release cycle. Designed for users who want to quickly identify impactful additions and quality-of-life upgrades, this documentation focuses on how these changes unlock new testing capabilities or streamline everyday testing tasks.
 
 ---
 
-## 1. Advanced Parameterized Test Support
+## How to Use This Page
 
-GoogleTest continues to expand its robust framework for **value-parameterized**, **typed**, and **type-parameterized tests**, helping you write concise, maintainable tests that cover a broad range of inputs and types without duplication.
+Browse this summary to spot must-use features and improvements at a glance. Each entry correlates to a specific release, outlining key updates that empower you to write more robust, maintainable tests while improving your overall testing workflow.
 
-- **TEST_P and INSTANTIATE_TEST_SUITE_P:** Create flexible value-parameterized tests and instantiate them with various parameter generators like `Values`, `Range`, and `Combine` for Cartesian product testing.
-  
-- **Typed Tests:** Use `TYPED_TEST_SUITE` and `TYPED_TEST` to run tests across multiple types efficiently.
-
-- **Type-Parameterized Tests:** Define abstract test patterns with `TYPED_TEST_SUITE_P` and instantiate them later with specific type lists using `INSTANTIATE_TYPED_TEST_SUITE_P`.
-
-- **Custom Test Names:** Generate meaningful test names for parameterized tests with user-defined `name_generator` functions, improving test output readability.
-
-These features empower you to systematically cover edge cases and interface implementations by running the same test logic across diverse inputs and types.
-
-## 2. Rich Assertions and Matchers Ecosystem
-
-Improved assertions and integration with GoogleMock’s matcher framework allow you to express precise test intentions and generate detailed diagnostics.
-
-- **New Assertion Macros:** Expanded support for predicate assertions (`EXPECT_PRED*`), predicate-formatter assertions (`EXPECT_PRED_FORMAT*`), and `EXPECT_THAT` to verify complex conditions with elegant syntax.
-
-- **Enhanced Matcher Support:** Hundreds of built-in matchers plus the ability to compose, combine, and create **custom matchers** with the `MATCHER` macros provide expressive matching of values, containers, pointers, and even complex objects.
-
-- **Floating-Point and String Assertions:** Specialized macros like `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, and string matchers enable precise comparison tolerant of rounding errors or flexible string matching.
-
-- **Exception and Death Assertions:** Better support for verifying exceptions and process termination, including death tests with controlled styles (`fast`, `threadsafe`).
-
-## 3. Improved Mocking Features and Behavior Control
-
-GoogleMock brings enhanced productivity and control to your test doubles.
-
-- **MOCK_METHOD Enhancements:** Simplified macro with support for mocking const, noexcept, overloaded, and template methods.
-
-- **Strictness Modes:** Introduced and improved support for `NiceMock`, `StrictMock`, and `NaggyMock` to balance test noise and strictness regarding uninteresting or unexpected calls.
-
-- **Delegation Patterns:** Easily delegate mock calls to fakes or real implementations while retaining verification abilities.
-
-- **Advanced Actions and Expectations:** Enhanced capabilities including variadic actions, parameterized actions, and action chaining with `DoAll()` allow rich, scenario-specific mock behaviors.
-
-- **Support for Move-Only Types:** Native support for methods accepting and returning move-only types (`std::unique_ptr`), enabling natural mocking in modern C++ code.
-
-- **MockFunction for std::function:** Mock `std::function` objects to test callbacks and function objects seamlessly.
-
-## 4. Test Discovery, Execution, and Event Listening
-
-- **Dynamic Test Registration:** Support for `RegisterTest` enables flexible test registration at runtime.
-
-- **Event Listener API:** Customize test reporting by extending or replacing default listeners for console or XML output.
-
-- **Fine-Grained Test Control:** New flags and environment variables allow filtering tests, sharding execution across machines, repeating or shuffling tests, and controlling output verbosity.
-
-## 5. Integration and Platform Support Enhancements
-
-- **Supported Platforms:** Continual updates to supported compilers, OSes, and environment standards, including mandatory C++17 support.
-
-- **Build System Integration:** Improved workflows for CMake and Bazel, including `gtest_main` linking and testing rules.
-
-- **Sanitizer and Thread Safety:** Enhanced integration with sanitizers and improved thread safety features relevant to death tests.
+For developers actively maintaining test suites or integrating GoogleTest in CI pipelines, these highlights help prioritize which new features to adopt and understand the rationale behind enhancements.
 
 ---
 
-## Practical Examples
+## Recent Major Features and Improvements
+
+### Support for Move-Only Types in Mock Methods
+GoogleMock now fully supports mocking methods with move-only types such as `std::unique_ptr`. This enhancement simplifies the testing of modern C++ code by allowing direct mocking of methods that take or return move-only arguments, avoiding cumbersome workarounds. Users can now define mocks using the familiar `MOCK_METHOD` macro even with move-only parameters or return types.
 
 ```cpp
-// Parameterized test example
-class FooTest : public testing::TestWithParam<int> {};
-
-TEST_P(FooTest, HandlesVariousValues) {
-    int param = GetParam();
-    EXPECT_GT(param, 0);
-}
-
-INSTANTIATE_TEST_SUITE_P(PositiveNumbers, FooTest, testing::Values(1, 2, 3));
+class MockBuzzer : public Buzzer {
+ public:
+  MOCK_METHOD(std::unique_ptr<Buzz>, MakeBuzz, (StringPiece text), (override));
+  MOCK_METHOD(bool, ShareBuzz, (std::unique_ptr<Buzz> buzz, int64_t timestamp), (override));
+};
 ```
 
+This makes tests for asynchronous or resource-managing APIs much more natural and clear.
+
+### Enhanced Mock Strictness Control
+The introduction of the `NiceMock`, `NaggyMock`, and `StrictMock` templates allows fine-grained control over the treatment of uninteresting calls on mocks:
+
+- `NiceMock<T>` suppresses warnings about uninteresting calls.
+- `NaggyMock<T>` (the current default) prints warnings.
+- `StrictMock<T>` treats uninteresting calls as errors, helping users catch unexpected interactions.
+
 ```cpp
-// Mocking an interface with delegation
-class Foo {
- public:
-  virtual ~Foo() = default;
-  virtual int DoSomething(int x) = 0;
-};
+using ::testing::NiceMock;
+NiceMock<MockFoo> nice_foo;
+```
 
-class FakeFoo : public Foo {
- public:
-  int DoSomething(int x) override { return x * 2; }
-};
+With these wrappers, you gain the power to make your tests more resilient or more strict based on the testing phase or purpose.
 
+### Fluent Expectation and Action Specification
+GoogleMock’s `EXPECT_CALL` macros continue to evolve, enabling:
+
+- Clear specification of call counts via cardinalities like `Times()`, including fuzzy ranges such as `AtLeast(n)` and `Between(m, n)`.
+- Ordering expectations using `InSequence` or `After`, to assert precise call order when needed.
+- Composition of multiple actions with `WillOnce` and `WillRepeatedly` clauses, allowing nuanced control over mock method return values and side effects.
+
+For example:
+
+```cpp
+EXPECT_CALL(mock_object, Method(_))
+    .Times(3)
+    .WillOnce(Return(1))
+    .WillOnce(Return(2))
+    .WillRepeatedly(Return(3));
+```
+
+This syntax makes tests more expressive and maintainable.
+
+### Support for Partial and Delegating Mocks
+GoogleMock allows delegation of mock behavior to:
+
+- **Fake implementations**, enabling code reuse when a complex fake exists and full mocking isn’t practical.
+- **Real objects**, preserving original behavior while monitoring calls.
+- **Parent class methods**, supporting legacy or hybrid classes where only a subset of methods are overridden.
+
+Example delegation to a fake:
+
+```cpp
 class MockFoo : public Foo {
  public:
-  MOCK_METHOD(int, DoSomething, (int), (override));
+  MOCK_METHOD(char, DoThis, (int n), (override));
 
   void DelegateToFake() {
-    ON_CALL(*this, DoSomething).WillByDefault([this](int x) {
-      return fake_.DoSomething(x);
+    ON_CALL(*this, DoThis).WillByDefault([this](int n) {
+      return fake_.DoThis(n);
     });
   }
 
@@ -111,41 +90,82 @@ class MockFoo : public Foo {
 };
 ```
 
-```cpp
-// Custom matcher example
-MATCHER(IsEven, "Checks if number is even") {
-  return (arg % 2) == 0;
-}
+This flexibility reduces duplication and eases incremental adoption.
 
-TEST(ExampleTest, EvenCheck) {
-  EXPECT_THAT(4, IsEven());
-  EXPECT_THAT(5, Not(IsEven()));
-}
+### Improved Support for Matchers and Argument Validation
+Matchers in GoogleMock provide powerful predicate-like facilities that help verify function arguments with precision:
+
+- Extensive built-in matchers for numeric, string, container, pointer, and composite types.
+- Facilities to compose matchers (`AllOf`, `AnyOf`, `Not`).
+- Ability to validate multiple arguments together using `.With()` clause.
+- Support for custom matchers using the `MATCHER` family of macros and matcher classes.
+
+```cpp
+EXPECT_CALL(mock_object, Process(_))
+    .With(AllOf(Args<0,1>(Gt()), Args<1,2>(Le())));
 ```
 
----
+Providing fine-grained control and meaningful failure messages empowers users to write robust, understandable tests.
 
-## Troubleshooting and Best Practices
+### New User Experience Enhancements
+- Extended diagnostics, including detailed failure messages with argument values and call stacks when using `--gmock_verbose=info` to troubleshoot expectation mismatches.
+- Support for convenient integration in editors like Emacs, enabling jump-to-error workflows to speed debugging.
+- Ability to verify and clear mock expectations before destruction for complex ownership patterns.
 
-- Avoid underscores in test suite and test names to prevent compilation issues.
-- Use `ASSERT_*` for fatal failures where subsequent code depends on the assertion's success.
-- Use `EXPECT_*` to allow tests to continue and collect multiple failures.
-- Carefully manage setup and teardown through constructors and `SetUp()/TearDown()` to ensure robust test isolation.
-- When using death tests, name test suites with a `*DeathTest` suffix to ensure correct ordering.
+### Thread Safety and Synchronization
+GoogleMock internally handles synchronization enabling:
 
-For more detailed guidance, see the [GoogleTest FAQ](docs/faq.md) and [Advanced Topics](docs/advanced.md).
+- Safe use of mocks in multi-threaded tests.
+- Guarantee that actions execute in the thread that invoked the mock.
 
----
+Users must still follow best practices by modifying mocks from a single thread during expectation setup and teardown.
 
-## Additional Resources
-
-- [Testing Reference](docs/reference/testing.md): Complete API details on test macros and classes.
-- [Assertions Reference](docs/reference/assertions.md): Comprehensive assertion macros and usage.
-- [gMock Cookbook](docs/gmock_cook_book.md): Practical recipes for mocking.
-- [Guides on Parameterized Tests](guides/core-workflows/parameterized-and-typed-tests.mdx): Mastering complex test parameterizations.
-- [Mocking Complex Scenarios](guides/core-workflows/mocking-scenarios.mdx): Advanced mock interactions and usage patterns.
-- [Test Execution Flow](concepts/testing-architecture/test-execution-flow.mdx): Understand how tests are discovered, run, and reported.
+### Simplified Mock Class Compilation
+Separating mock class constructor and destructor definitions into source files reduces compilation times, addressing a common pain point in large codebases.
 
 ---
 
-Stay on top of improvements to make the most of GoogleTest’s powerful, flexible, and scalable testing capabilities in your C++ projects.
+## Best Practices Illustrated
+
+GoogleMock encourages patterns that improve test maintainability:
+
+- Use `ON_CALL` for setting default behaviors common to many tests, avoiding over-specification.
+- Use `EXPECT_CALL` sparingly, focusing on actual call verification.
+- Use sequences (`InSequence`) to enforce call order only when necessary.
+- Delegate calls to fakes or real objects to avoid redundant implementations.
+
+This page helps users stay informed and plan upgrades that make tests more reliable and concise.
+
+---
+
+## Troubleshooting Tips
+
+- If you encounter warnings like "Uninteresting mock function call", consider switching to `NiceMock` or explicitly allowing unexpected calls with `.Times(AnyNumber())`.
+- Use the `--gmock_verbose` flag to adjust logging verbosity for easier diagnostics.
+- If your test fails due to unexpected calls, review your `EXPECT_CALL` ordering and argument matchers; newer expectations override older ones.
+- When mocking move-only types, use lambda actions or carefully manage move semantics to avoid runtime errors.
+
+---
+
+## Related Documentation
+
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly introduction to mocking concepts.
+- [Mocking Reference](../api-reference/core-apis/gmock-mocking-api) — Comprehensive details on mocking API.
+- [Matchers Reference](../api-reference/matchers-and-assertions/gmock-matchers) — Full list and guidance on matchers.
+- [Actions API](../api-reference/mock-actions-cardinalities/gmock-actions) — Detailed information about mock method actions.
+- [Mock Strictness Control](../api-reference/core-apis/gmock-nice-strict-api) — How to manage mock call strictness.
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Recipes for practical mocking scenarios.
+- [Writing and Running Your First Test](../guides/getting-started/writing-your-first-test) — Getting started guide.
+
+For integration and troubleshooting, consult:
+
+- [System Requirements & Supported Platforms](../getting-started/prerequisites-installation-setup/system-requirements-supported-platforms)
+- [Installation with CMake and Bazel](../getting-started/prerequisites-installation-setup/installation-cmake-bazel)
+- [Troubleshooting Common Build Issues](../getting-started/first-test-debugging/troubleshooting-common-issues)
+
+---
+
+Explore the **Release History & Highlights** page for a complete timeline of release notes and changelogs.
+
+
+---
